# social-watchdog

./: .env.template  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: build_packages.yml  create-docker-image.yml  merge_checks.yml
deploy/: docker-compose.devel.yml  docker-compose.yml
lib/lib-core/: pyproject.toml
lib/lib-core/lib_core/repositories/: generic_repository.py  watchable_repository.py
lib/lib-core/lib_core/services/: __init__.py  watchable_service.py
lib/lib-core/lib_core/types/: __init__.py  watchable.py
lib/lib-core/tests/: test_lib_core.py  test_watchable_limiter.py
lib/libcore/: pyproject.toml
lib/libcore/libcore/repositories/: __init__.py  generic_repository.py  watchable_repository.py
lib/libcore/libcore/services/: watchable_service.py
lib/libcore/libcore/types/: __init__.py  submission.py  watchable.py  watchable_notification.py
lib/libcore/libcore/workers/: __init__.py  periodic_worker.py  reddit_search_periodic_worker.py
lib/libcore/tests/: test_lib_core.py  test_watchable_limiter.py
lib/liblog/: pyproject.toml
lib/liblog/liblog/: __init__.py  main.py
lib/liblog/tests/: test_liblog.py
lib/libmq/: pyproject.toml
lib/libmq/libmq/: __init__.py  mq_wrapper.py
lib/libmq/tests/: test_libmq.py
provisioning/: harden_ssh.yaml  install-docker.yaml  prepare_vps.yaml
provisioning/vars/: default.yml
services/search-service/: Dockerfile  __main__.py  pyproject.toml
services/search-service/search_service/: __init__.py  lemmatizer.py  main.py  periodic_worker.py  reddit_search_periodic_worker.py  text_matchers.py  twitter_search_periodic_worker.py  watchable_processor.py
services/search-service/tests/: test_matchers.py  test_search_service.py  test_watchable_processor.py
services/telegram-bot/: .env.template  Dockerfile  __main__.py  pyproject.toml  test.py
services/telegram-bot/telegram_bot/: __init__.py  bot.py  main.py  notification_receiver.py  watchable_service.py
services/telegram-bot/tests/: test_telegram_bot.py  test_watchable_limiter.py
