[tool.poetry]
name = "reddit-watchdog"
version = "0.1.0"
description = ""
authors = ["Michal Manak <fredybotas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
telegram-bot = { path = "./services/telegram-bot", develop = true }
search-service = { path = "./services/search-service", develop = true }
libcore = { path = "./lib/libcore", develop = true }
libmq = { path = "./lib/libmq", develop = true}
liblog = { path = "./lib/liblog", develop = true}
spacy = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
