[tool.poetry]
name = "libcore"
version = "0.1.0"
description = ""
authors = ["Michal Manak <fredybotas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv"], version = "^4.0.1"}
schedule = "^1.1.0"
praw = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
