[tool.poetry]
name = "search-service"
version = "0.1.0"
description = ""
authors = ["Michal Manak <fredybotas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
libcore = ""
libmq = ""
liblog = ""
praw = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
libcore = { path = "../../lib/libcore", develop = true }
libmq = { path = "../../lib/libmq", develop = true }
liblog = { path = "../../lib/liblog", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
