[tool.poetry]
name = "search-service"
version = "0.1.0"
description = ""
authors = ["Michal Manak <fredybotas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
libcore = ""
libmq = ""
liblog = ""
spacy = "^3.2.1"
schedule = "^1.1.0"
tweepy = "^4.4.0"
asyncpraw = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
libcore = { path = "../../lib/libcore", develop = true }
libmq = { path = "../../lib/libmq", develop = true }
liblog = { path = "../../lib/liblog", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
